--- a/source/styles/components/main/manual.css
+++ b/source/styles/components/main/manual.css
@@ -11,22 +11,19 @@
 
 .manual__main-card {
 	padding: 25px;
+
 	background-position: right bottom;
 	background-repeat: no-repeat;
 }
 
 .manual__main-card--book {
-	background: url('../images/main/manual/book.png') no-repeat right bottom,
-		linear-gradient(79.81deg, #4D506C -60%, #212339 100.33%);
-	backdrop-filter: blur(26.0819px);
+	background: url('../images/main/manual/book.png') no-repeat right bottom, linear-gradient(79deg, #4D506C -60%, #212339 100%);
+	backdrop-filter: blur(26px);
 }
 
 .manual__main-card--coobs {
-	background: url('../images/main/manual/cubs.png') no-repeat right bottom,
-		linear-gradient(79.81deg, #4D506C -60%, #212339 100.33%);
-	backdrop-filter: blur(26.0819px);
-
-
+	background: url('../images/main/manual/cubs.png') no-repeat right bottom, linear-gradient(79deg, #4D506C -60%, #212339 100%);
+	backdrop-filter: blur(26px);
 }
 
 .manual__content {
@@ -36,9 +33,10 @@
 }
 
 .manual__title {
+	max-width: 210px;
+
 	font-size: 22px;
 	line-height: 105.5%;
-	max-width: 210px;
 }
 
 .manual__text {
@@ -47,6 +45,7 @@
 
 .manual__button {
 	max-width: 188px;
+
 	font-size: 14px;
 	line-height: 14px;
 }
@@ -66,9 +65,10 @@
 	}
 
 	.manual__title {
+		max-width: 401px;
+
 		font-size: 42px;
 		line-height: 105.5%;
-		max-width: 401px;
 	}
 
 	.manual__text {
@@ -76,8 +76,7 @@
 	}
 
 	.manual__main-card--book {
-		background: url('../images/main/manual/book-desk.png') no-repeat right bottom,
-			linear-gradient(79.81deg, #4D506C -60%, #212339 100.33%);
-		backdrop-filter: blur(26.0819px);
+		background: url('../images/main/manual/book-desk.png') no-repeat right bottom, linear-gradient(79deg, #4D506C -60%, #212339 100%);
+		backdrop-filter: blur(26px);
 	}
 }
