--- a/source/styles/components/main/event.css
+++ b/source/styles/components/main/event.css
@@ -1,43 +1,38 @@
 .event {
-	padding: 10px 0;
 	display: flex;
 	flex-direction: column;
 	gap: 15px;
+	padding: 10px 0;
 }
 
 @media (min-width: 1220px) {
-
 	.event {
 		flex-direction: row;
 		gap: 30px;
 	}
 }
 
-
-
-
-
 .event__main-card {
 	padding: 25px;
+
 	background-position: right bottom;
 	background-repeat: no-repeat;
 }
 
 .event__main-card--hand {
-	background: url('../images/main/event/hand.png') no-repeat right bottom,
-		linear-gradient(104.9deg, #4D506C 0.54%, #212339 66.94%);
+	background: url('../images/main/event/hand.png') no-repeat right bottom, linear-gradient(104deg, #4D506C 0.54%, #212339 66%);
 }
 
 .event__main-card--head {
-	background: url('../images/main/event/head.png') no-repeat right bottom,
-		linear-gradient(79.81deg, #4D506C -60%, #212339 100.33%);
-	backdrop-filter: blur(26.0819px);
+	background: url('../images/main/event/head.png') no-repeat right bottom, linear-gradient(79deg, #4D506C -60%, #212339 100%);
+	backdrop-filter: blur(26px);
 }
 
 .event__title {
-	font-size: 22px;
-	line-height: 105.5%;
 	max-width: 210px;
+
+	font-size: 22px;
+	line-height: 1;
 }
 
 .event__text {
@@ -46,20 +41,19 @@
 
 .event__button--smal {
 	max-width: 93px;
+
 	font-size: 14px;
 	line-height: 14px;
 }
 
 .event__button--large {
 	max-width: 191px;
+
 	font-size: 14px;
 	line-height: 14px;
 }
 
 @media (min-width: 1220px) {
-
-
-
 	.event__main-card {
 		max-width: 632px;
 		width: 100%;
@@ -69,19 +63,18 @@
 	}
 
 	.event__main-card--hand {
-		background: url('../images/main/event/hands-desctop.png') no-repeat right bottom,
-			linear-gradient(104.9deg, #4D506C 0.54%, #212339 66.94%);
+		background: url('../images/main/event/hands-desctop.png') no-repeat right bottom, linear-gradient(104deg, #4D506C 0.54%, #212339 66.94%);
 	}
 
 	.event__main-card--head {
-		background: url('../images/main/event/hand-decktop.png') no-repeat right bottom,
-			linear-gradient(79.81deg, #4D506C -60%, #212339 100.33%);
-		backdrop-filter: blur(26.0819px);
+		background: url('../images/main/event/hand-decktop.png') no-repeat right bottom, linear-gradient(79deg, #4D506C -60%, #212339 100%);
+		backdrop-filter: blur(26px);
 	}
 
 	.event__title {
-		font-size: 42px;
 		max-width: 389px;
+
+		font-size: 42px;
 	}
 
 	.event__text {
@@ -90,12 +83,13 @@
 
 	.event__button--smal {
 		max-width: 139px;
+
 		font-size: 16px;
 	}
 
 	.event__button--large {
 		max-width: 236px;
+
 		font-size: 16px;
 	}
-
 }
