--- a/source/styles/components/main/last.css
+++ b/source/styles/components/main/last.css
@@ -28,17 +28,18 @@
 	}
 
 	.last__top {
-		margin-bottom: 55px;
 		display: flex;
 		justify-content: space-between;
+		margin-bottom: 55px;
 	}
 
 	.last__link {
 		display: inline-flex;
-		border: 1px solid #FFFFFF;
-		border-radius: 50px;
 		padding: 8px 30px;
 		margin-right: 42px;
+
+		border: 1px solid #FFFFFF;
+		border-radius: 50px;
 	}
 
 
@@ -49,27 +50,27 @@
 		grid-gap: 30px;
 	}
 
-	.item1 {
+	.last__grid-item1 {
 		grid-area: 1 / 1 / 2 / 2;
 		gap: 30px;
 	}
 
-	.item2 {
+	.last__grid-item2 {
 		grid-area: 1 / 2 / 2 / 3;
 		gap: 30px;
 	}
 
-	.item3 {
+	.last__grid-item3 {
 		grid-area: 1 / 3 / 2 / 4;
 	}
 
-	.item4 {
+	.last__grid-item4 {
 		grid-area: 2 / 1 / 3 / 3;
 		justify-content: space-between;
 
 	}
 
-	.item5 {
+	.last__grid-item5 {
 		grid-area: 2 / 3 / 3 / 4;
 		justify-content: space-between;
 	}
