--- a/source/styles/components/profile.css
+++ b/source/styles/components/profile.css
@@ -57,7 +57,7 @@
 	}
 }
 
-.profile__avatar-image {
+.profile__avatar-container {
 	--size: 80px;
 
 	width: var(--size);
@@ -65,16 +65,26 @@
 
 	border-radius: 50%;
 	border: 5px solid #212339;
-	background-color: #31344c;
 }
 
 @media (min-width: 768px) { /* tablet */
-	.profile__avatar-image {
+	.profile__avatar-container {
 		--size: 140px;
 	}
 }
 
+.profile__avatar-image {
+	width: 100%;
+	height: 100%;
+
+	background-color: #31344c;
+	object-fit: cover;
+	border-radius: inherit;
+}
+
 .profile__avatar-info {
+	position: relative;
+
 	display: flex;
 	flex-direction: column;
 	align-items: center;
@@ -175,7 +185,6 @@
 	font-size: var(--text-size);
 	font-weight: 800;
 	font-family: "NeueMachina";
-	text-align: center;
 	text-decoration: none;
 	word-wrap: break-word;
 }
@@ -183,6 +192,20 @@
 @media (min-width: 768px) { /* tablet */
 	.profile__nickname {
 		--text-size: 32px;
+	}
+}
+
+.profile__nickname,
+.profile__input {
+	--width: 170px;
+
+	width: var(--width);
+}
+
+@media (min-width: 768px) {
+	.profile__nickname,
+	.profile__input {
+		--width: 230px;
 	}
 }
 
@@ -316,4 +339,37 @@
 	.profile__navigation {
 		--gap: 20px;
 	}
+}
+
+.profile__avatar-file-text {
+	--text-size: 12px;
+	--icon-position-y: 16%;
+
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	width: 100%;
+	height: 100%;
+	padding-top: 15px;
+
+	font-size: var(--text-size);
+	text-align: center;
+	color: #1f203c;
+
+	background-color: #ffffff;
+	border-radius: inherit;
+	background-image: url("data:image/svg+xml,%3Csvg width='17' height='17' viewBox='0 0 17 17' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M8.72842 8.04323L8.72842 8.40961L9.09481 8.40961L11.669 8.40961L11.669 8.51685L9.09481 8.51685H8.72842V8.88323L8.72842 11.4575H8.62119L8.62118 8.88323V8.51685H8.2548L5.68058 8.51685L5.68058 8.40961L8.2548 8.40961L8.62118 8.40961L8.62118 8.04323V5.469H8.72842V8.04323Z' fill='white' stroke='%231F203C' stroke-width='0.732764'/%3E%3Ccircle cx='8.50012' cy='8.50012' r='7.89297' stroke='%231F203C' stroke-width='1.2143'/%3E%3C/svg%3E%0A");
+	background-repeat: no-repeat;
+	background-position: center top 22%;
+}
+
+@media (min-width: 768px) { /* tablet */
+	.profile__avatar-file-text {
+		--text-size: 18px;
+		--icon-position-y: 22%;
+	}
+}
+
+.profile__avatar-file-text:hover {
+	cursor: pointer;
 }
