--- a/source/styles/components/main/last.css
+++ b/source/styles/components/main/last.css
@@ -43,42 +43,25 @@
 	}
 
 
-	.last__content-top {
+
+
+
+
+		.last__content-top {
 		display: grid;
-		grid-template-columns: repeat(3, 410px);
+		grid-template-columns: repeat(3, 1fr);
 		grid-template-rows: 540px 320px;
 		grid-gap: 30px;
 	}
 
-	.last__grid-item1 {
-		grid-area: 1 / 1 / 2 / 2;
-		gap: 30px;
-	}
 
-	.last__grid-item2 {
-		grid-area: 1 / 2 / 2 / 3;
-		gap: 30px;
-	}
-
-	.last__grid-item3 {
-		grid-area: 1 / 3 / 2 / 4;
-	}
-
-	.last__grid-item4 {
-		grid-area: 2 / 1 / 3 / 3;
-		justify-content: space-between;
-
-	}
-
-	.last__grid-item5 {
-		grid-area: 2 / 3 / 3 / 4;
-		justify-content: space-between;
-	}
-
-
-	.last__main-card-link {
-		position: absolute;
-		bottom: 30px;
+	.last__grid:nth-child(4n) {
+		grid-column: span 2;
 	}
 
 }
+
+
+
+
+
