--- a/source/styles/components/main/last.css
+++ b/source/styles/components/main/last.css
@@ -43,11 +43,7 @@
 	}
 
 
-
-
-
-
-		.last__content-top {
+	.last__content-top {
 		display: grid;
 		grid-template-columns: repeat(3, 1fr);
 		grid-template-rows: 540px 320px;
@@ -55,13 +51,8 @@
 	}
 
 
-	.last__grid:nth-child(4n) {
+	.last__grid:nth-child(5n+4) {
 		grid-column: span 2;
 	}
 
 }
-
-
-
-
-
