--- a/source/styles/components/main/popular.css
+++ b/source/styles/components/main/popular.css
@@ -18,9 +18,9 @@
 }
 
 @media (min-width: 1220px) {
-.popular__top {
-	margin-bottom: 40px;
-}
+	.popular__top {
+		margin-bottom: 40px;
+	}
 }
 
 .popular__title {
@@ -93,28 +93,50 @@
 		grid-gap: 30px;
 	}
 
+
+	.popular__grid-item:nth-child(5n+1) {
+		grid-column: span 2;
+	}
+
+	.popular__grid-item:nth-child(5n+2) {
+		grid-row: span 2;
+	}
+
+	.popular__grid-item:nth-child(5n+3) {
+		grid-row: span 2;
+	}
+
+	.popular__grid-item:nth-child(5n+5) {
+		grid-column: span 2;
+	}
+
+
+
+
+
+
 	.popular__grid-item1 {
-		grid-area: 1 / 1 / 2 / 3;
+
 		justify-content: space-between;
 	}
 
 	.popular__grid-item2 {
-		grid-area: 1 / 3 / 3 / 4;
+
 		gap: 30px;
 	}
 
 	.popular__grid-item3 {
-		grid-area: 2 / 1 / 4 / 2;
+
 		gap: 20px;
 	}
 
 	.popular__grid-item4 {
-		grid-area: 2 / 2 / 3 / 3;
+
 		justify-content: space-between;
 	}
 
 	.popular__grid-item5 {
-		grid-area: 3 / 2 / 4 / 4;
+
 		flex-direction: row;
 		position: relative;
 	}
