--- a/source/styles/components/main/event.css
+++ b/source/styles/components/main/event.css
@@ -2,7 +2,7 @@
 	display: flex;
 	flex-direction: column;
 	gap: 15px;
-	padding: 10px 0;
+	padding: 10px 15px;
 }
 
 @media (min-width: 1220px) {
@@ -11,6 +11,8 @@
 		gap: 30px;
 	}
 }
+
+
 
 .event__main-card {
 	padding: 25px;
