--- a/source/styles/index.css
+++ b/source/styles/index.css
@@ -66,3 +66,4 @@
 @import "components/external.css";
 @import "components/c-main-header.css";
 @import "components/profile.css";
+@import "components/quiz.css";
