--- a/source/styles/components/filter.css
+++ b/source/styles/components/filter.css
@@ -172,6 +172,9 @@
 .filter {
 	margin: 0 auto;
 	text-align: left;
+}
+
+.filter__container {
 	padding: 20px 10px;
 }
 
@@ -527,8 +530,12 @@
 		width: 9px;
 		top: 50%;
 		left: 0;
-		background-image: url(../images/footer/arrow.svg);
+		background-image: url("data:image/svg+xml,%3Csvg width='9' height='6' viewBox='0 0 9 6' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M4.5 2.18154L1.54317 5.40726C1.25105 5.72595 0.748638 5.72595 0.456518 5.40726C0.19822 5.12548 0.19822 4.69298 0.456518 4.4112L3.76284 0.804202C4.15917 0.37182 4.84083 0.37182 5.23716 0.804202L8.54348 4.4112C8.80178 4.69298 8.80178 5.12548 8.54348 5.40727C8.25136 5.72595 7.74895 5.72595 7.45683 5.40726L4.5 2.18154Z' fill='%23A6A7B0'/%3E%3C/svg%3E%0A");
 		opacity: .5;
+	}
+
+	.filter__button-hide_state_active:after {
+		background-image: url(../images/footer/arrow.svg);
 	}
 
 
@@ -548,6 +555,10 @@
 	.filter__bottom-button {
 		font-size: 18px;
 		color: rgba(166, 167, 176, 1);
+	}
+
+	.filter__bottom-button:hover {
+		cursor: pointer;
 	}
 
 
