--- a/source/styles/base/global.css
+++ b/source/styles/base/global.css
@@ -87,7 +87,7 @@
 .page__c-main-header {
 	--space: 30px;
 
-	position: fixed;
+	position: absolute;
 	top: var(--space);
 	right: var(--space);
 	left: var(--space);
