--- a/source/styles/components/main/hero.css
+++ b/source/styles/components/main/hero.css
@@ -1,9 +1,14 @@
 .hero {
-	background-image: url('../images/main/hero/bg.png');
-	background-position: center center;
-	background-repeat: no-repeat;
-	background-size: cover;
+	position: relative;
 
+	display: flex;
+	align-items: center;
+	flex-direction: column;
+	gap: 26px;
+	justify-content: center;
+	min-height: 100vh;
+
+	text-align: center;
 }
 
 .hero__container {
