--- a/source/styles/components/main/main-card.css
+++ b/source/styles/components/main/main-card.css
@@ -25,7 +25,7 @@
 
 .main-card__img {
 	display: block;
-	max-width: 298px;
+
 	width: 100%;
 	height: 135px;
 
@@ -35,13 +35,13 @@
 
 @media (min-width: 1220px) {
 	.main-card__img {
-		max-width: 350px;
+width: 100%;
 		height: 210px;
 	}
 
 	.main-card__img_size_large {
-		max-width: 350px;
 		height: 268px;
+		width: 100%;
 	}
 
 	.main-card__img_size_long {
