--- a/source/styles/components/button.css
+++ b/source/styles/components/button.css
@@ -55,3 +55,30 @@
 	padding: 13px 20px;
 	color: rgba(33, 41, 67, 1);
 }
+
+.button_state_save,
+.button_state_cancel {
+	--space: 13px 37px;
+
+	padding: var(--space);
+
+	border-radius: 5px;
+
+	color: #ffffff;
+	font-weight: bold;
+}
+
+@media (min-width: 768px) { /* tablet */
+	.button_state_save,
+	.button_state_cancel {
+		--space: 11px 34px;
+	}
+}
+
+.button_state_save {
+	background-color: #27ae60;
+}
+
+.button_state_cancel {
+	background-color: #d92b4d;
+}
