--- a/source/styles/components/quiz.css
+++ b/source/styles/components/quiz.css
@@ -533,13 +533,15 @@
 	border-radius: 5px;
 }
 
-.quiz__success {
+.quiz__success,
+.content__success {
 	--coordinates: 10px;
 
 	position: fixed;
 	opacity: 0;
 	right: var(--coordinates);
 	bottom: var(--coordinates);
+	z-index: 999;
 
 	padding: 10px;
 
@@ -549,23 +551,25 @@
 }
 
 @media (min-width: 768px) {
-	.quiz__success {
+	.quiz__success,
+	.content__success {
 		--coordinates: 25px;
 	}
 }
 
-.quiz__success_state_active {
+.quiz__success_state_active,
+.content__success_state_active {
 	animation-name: fadeInUp;
 	animation-duration: 1s;
 }
 
 @keyframes fadeInUp {
-  from {
-    transform: translate3d(0, 100%, 0);
-  }
+	from {
+		transform: translate3d(0, 100%, 0);
+	}
 
-  to {
-    opacity: 1;
-    transform: translate3d(0, 0, 0);
-  }
+	to {
+		opacity: 1;
+		transform: translate3d(0, 0, 0);
+	}
 }
