Fix minor styles

--- a/source/styles/components/footer/footer.css
+++ b/source/styles/components/footer/footer.css
@@ -259,7 +259,7 @@
 	height: var(--size);
 
 	border-radius: 50%;
-	background-color: #212339;
+	background-color: #3B3C50;
 }
 
 .footer__social-link svg {
